--- a/Application/UI/Xib/PostCell.xib
+++ b/Application/UI/Xib/PostCell.xib
@@ -15,11 +15,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="260"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xuD-66-s4y">
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xuD-66-s4y">
                         <rect key="frame" x="8" y="8" width="304" height="244"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="OmJ-iC-Y46">
-                                <rect key="frame" x="0.0" y="0.0" width="252" height="54"/>
+                                <rect key="frame" x="0.0" y="95" width="252" height="54"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ZB-Y0-aug">
                                         <rect key="frame" x="0.0" y="0.0" width="252" height="33.666666666666664"/>
@@ -28,15 +28,15 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kKD-8P-nH6">
-                                        <rect key="frame" x="0.0" y="33.666666666666664" width="252" height="20.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="33.666666666666657" width="252" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DiW-mL-mWf">
-                                <rect key="frame" x="260" y="0.0" width="44" height="44"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DiW-mL-mWf" customClass="FavouriteImageView" customModule="MVPArchitecture">
+                                <rect key="frame" x="260" y="100" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="DiW-mL-mWf" secondAttribute="height" multiplier="1:1" id="3W7-5Q-Jjp"/>
                                     <constraint firstAttribute="width" constant="44" id="aO1-MK-aAC"/>
